--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>ChillDev</title>
 </head>
 <body>
-    <div class="parallax">
-        
+
+    <div style="height:500px;background-color:gray;font-size:36px">
+        Hey! I am ChillDev a 13 Year self taught developer.
     </div>
+
+    <div class="parallax"></div>
 </body>
 </html>
