--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <div class="parallax"></div>
+
     <div style="height:500px;background-color:gray;font-size:36px">
         Hey! I am ChillDev a 13 Year self taught developer.
     </div>
